limpiando codigo