@@ -1,8 +1,3 @@
-/*
-* To change this license header, choose License Headers in Project Properties.
-* To change this template file, choose Tools | Templates
-* and open the template in the editor.
-*/
 package encriptaciones;
 
 import com.sun.xml.wss.impl.misc.Base64;
@@ -42,8 +37,8 @@ public class KeyGetter {
                 }
             }
         }
-        //return DatatypeConverter.printBase64Binary(bytes);
-        //return Base64.encode(bytes);
+        //return DatatypeConverter.printBase64Binary(bytes); //Versión alternativa
+        //return Base64.encode(bytes); //Versión alternativa
         return hexadecimal(bytes);
     }
     /**
